--- a/src/giaodien/Tuan3.fxml
+++ b/src/giaodien/Tuan3.fxml
@@ -1,72 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="476.0" prefWidth="759.0" style="-fx-background-color: #ffe6ff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="giaodien.ControllerTuan1">
+<AnchorPane prefHeight="476.0" prefWidth="759.0" style="-fx-background-color: #ffe6ff;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="giaodien.ControllerTuan3">
    <children>
       <Button fx:id="Show1" layoutX="82.0" layoutY="198.0" mnemonicParsing="false" onAction="#Showex1" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 1" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show2" layoutX="254.0" layoutY="198.0" mnemonicParsing="false" onAction="#Showex2" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 2" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show3" layoutX="424.0" layoutY="198.0" mnemonicParsing="false" onAction="#Showex3" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 3" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show4" layoutX="579.0" layoutY="198.0" mnemonicParsing="false" onAction="#Showex4" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 4" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
-      <Label fx:id="lb1" layoutX="92.0" layoutY="57.0" prefHeight="117.0" prefWidth="576.0" textAlignment="CENTER" textFill="#000cf5" wrapText="true">
-         <font>
-            <Font name="Calibri Bold Italic" size="18.0" />
-         </font></Label>
+         </font>
+      </Button>
       <Button fx:id="Back" layoutX="690.0" mnemonicParsing="false" onAction="#Back" opacity="0.94" prefHeight="26.0" prefWidth="69.0" style="-fx-background-color: #ff3333;" text="Back" textFill="#fffffff5">
          <font>
             <Font name="Calibri Bold Italic" size="15.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show8" layoutX="579.0" layoutY="266.0" mnemonicParsing="false" onAction="#Showex8" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 8" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show7" layoutX="424.0" layoutY="266.0" mnemonicParsing="false" onAction="#Showex7" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 7" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show6" layoutX="254.0" layoutY="266.0" mnemonicParsing="false" onAction="#Showex6" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 6" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show5" layoutX="82.0" layoutY="266.0" mnemonicParsing="false" onAction="#Showex5" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 5" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show12" layoutX="579.0" layoutY="335.0" mnemonicParsing="false" onAction="#Showex12" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 12" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show11" layoutX="424.0" layoutY="335.0" mnemonicParsing="false" onAction="#Showex11" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 11" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show10" layoutX="254.0" layoutY="335.0" mnemonicParsing="false" onAction="#Showex10" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 10" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
+         </font>
+      </Button>
       <Button fx:id="Show9" layoutX="82.0" layoutY="335.0" mnemonicParsing="false" onAction="#Showex9" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 9" textFill="#000cf5cf" wrapText="true">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
-         </font></Button>
-      <Label layoutX="14.0" layoutY="15.0" prefHeight="34.0" prefWidth="229.0" text="A. các bài tập java cơ bản" textFill="#000cf5">
+         </font>
+      </Button>
+      <Label layoutX="14.0" layoutY="15.0" prefHeight="34.0" prefWidth="229.0" text="C. Bài tập về mảng" textFill="#000cf5">
          <font>
             <Font name="Calibri Bold Italic" size="21.0" />
+         </font>
+      </Label>
+      <Button fx:id="Show13" layoutX="341.0" layoutY="392.0" mnemonicParsing="false" onAction="#Showex13" prefHeight="40.0" prefWidth="99.0" style="-fx-background-color: #ffad33;" text="Bài 13" textFill="#000cf5cf" wrapText="true">
+         <font>
+            <Font name="Calibri Bold Italic" size="21.0" />
+         </font>
+      </Button>
+      <Label fx:id="lb1" layoutX="92.0" layoutY="59.0" prefHeight="117.0" prefWidth="576.0" textAlignment="CENTER" textFill="#000cf5" wrapText="true">
+         <font>
+            <Font name="Calibri Bold Italic" size="18.0" />
          </font>
       </Label>
    </children>
